Fix  image overlapping issue in Photo Album page on smaller devices

--- a/frontend/src/app/photo-wall/photo-wall.component.scss
+++ b/frontend/src/app/photo-wall/photo-wall.component.scss
@@ -48,7 +48,7 @@ input {
   align-items: center;
   display: grid;
   grid-gap: 20px;
-  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(255px, 1fr));
 }
 
 .grid img {
